fixade z-index på navbar

--- a/files/style.css
+++ b/files/style.css
@@ -67,6 +67,7 @@ nav {
     background-color: rgb(0, 0, 0);
     top: 0;
     position: sticky;
+    z-index: 1;
 }
 
 nav a {
